sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: type mismatch;
 found   : Unit
 required: Boolean
    if(i=0){
        ^